--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   </style>
 </head>
 <body>
-  <button id="logoutBtn" class="btn btn-sm btn-dark d-none">Cerrar sesión</button>
+  <button id="logoutBtn" class="btn btn-sm btn-danger rounded-pill d-none" style="position: absolute; top: 10px; right: 10px; z-index: 999;">Cerrar sesión</button>
 
   <div id="loginModal">
     <div class="card">
