--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     html, body {
       height: 100%;
       margin: 0;
-      background-image: url('fondo.png');
+      background-image: url('fondo2.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
