--- a/nombre_direccion.html
+++ b/nombre_direccion.html
@@ -9,7 +9,7 @@
     html, body {
       height: 100%;
       margin: 0;
-      background-image: url('fondo.png');
+      background-image: url('fondo5.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -20,6 +20,15 @@
 
     .container {
       flex: 1;
+    }
+
+    .form-container {
+      background-color: rgba(255, 255, 255, 0.85);
+      padding: 2rem;
+      border-radius: 1rem;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      max-width: 600px;
+      margin: auto;
     }
 
     footer {
@@ -48,7 +57,7 @@
 <body>
   <div class="container mt-5">
     <h2 class="text-center mb-4">Actualizar Nombre y Dirección</h2>
-    <form class="shadow p-4 rounded bg-light" onsubmit="event.preventDefault(); enviarNombreDireccion();">
+    <form class="form-container" onsubmit="event.preventDefault(); enviarNombreDireccion();">
       
       <div class="mb-3">
         <label for="codigo" class="form-label">Código del Cliente:</label>
@@ -178,9 +187,3 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
-
-
-
-
