--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -9,7 +9,7 @@
     html, body {
       height: 100%;
       margin: 0;
-      background-image: url('fondo.png');
+      background-image: url('fondo4.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
