--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -9,46 +9,66 @@
     html, body {
       height: 100%;
       margin: 0;
+      display: flex;
+      flex-direction: column;
+      color: rgb(8, 0, 0);
+      overflow-x: hidden;
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       background-image: url('fondo5.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      display: flex;
-      flex-direction: column;
-      color: rgb(8, 0, 0);
+      z-index: -1;
     }
+
     .container {
       flex: 1;
     }
+
     footer {
       background-color: #000;
       padding: 20px;
       color: white;
       text-align: center;
     }
+
     .footer-content {
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 15px;
     }
+
     .footer-left-img {
       max-height: 40px;
     }
+
     footer p {
       margin: 0;
     }
+
     .modal-content {
       border-radius: 10px;
     }
+
     .modal-header {
       background-color: #28a745;
       color: white;
     }
+
     .modal-footer {
       background-color: #fff;
       text-align: center;
     }
+
     .modal-footer .btn {
       color: black;
       background-color: #ffffff;
@@ -130,7 +150,6 @@
       })
       .then(() => {
         showToast("✅ Cliente creado exitosamente.", "success");
-        // Mostrar modal de éxito
         const modal = new bootstrap.Modal(document.getElementById('successModal'));
         modal.show();
         document.querySelector("form").reset();
@@ -192,10 +211,10 @@
         </select>
       </div>
 
-    <div class="mb-3">
-  <label for="id" class="form-label">Número de Identidad:</label>
-  <input type="text" class="form-control" id="id" maxlength="13" required pattern="\d{1,13}" title="Solo números, máximo 13 caracteres" />
-</div>
+      <div class="mb-3">
+        <label for="id" class="form-label">Número de Identidad:</label>
+        <input type="text" class="form-control" id="id" maxlength="13" required pattern="\d{1,13}" title="Solo números, máximo 13 caracteres" />
+      </div>
 
       <div class="mb-3">
         <label for="rtn" class="form-label">RTN (opcional):</label>
@@ -213,8 +232,8 @@
       </div>
 
       <button type="button" class="btn btn-info w-100" onclick="obtenerCoordenadas()">📍 Obtener Coordenadas</button>
-      <button type="submit" class="btn btn-primary w-100 mt-3">📤 Enviar</button>
       <button type="button" class="btn btn-warning w-100 mt-2" onclick="refrescarFormulario()">🔄 Refrescar</button>
+      <button type="submit" class="btn btn-primary w-100 mt-3">📤 Enviar</button>
     </form>
   </div>
 
@@ -248,5 +267,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
