--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -121,6 +121,7 @@
       const rtn = document.getElementById("rtn").value.trim();
       const telefono = document.getElementById("telefono").value.trim();
       const coordenadas = document.getElementById("coordenadas").value.trim();
+      const foto = document.getElementById("foto").files[0];
 
       if (!ruta || !nombre || !direccion || !semana || !dia || !id || !coordenadas) {
         showToast("⚠️ Por favor completa todos los campos obligatorios.", "warning");
@@ -129,24 +130,24 @@
 
       const [latitud, longitud] = coordenadas.split(",");
 
-      fetch('https://script.google.com/macros/s/AKfycbwlokjzWuk3bEeeV-VFF8nv7lopVci-UFT1YKzlZQV_zNMd2XGYAR1FFAyTD_lGo-kV/exec', {
+      const formData = new FormData();
+      formData.append('ruta', ruta);
+      formData.append('nombre', nombre);
+      formData.append('direccion', direccion);
+      formData.append('semana', semana);
+      formData.append('dia', dia);
+      formData.append('id', id);
+      formData.append('rtn', rtn);
+      formData.append('telefono', telefono);
+      formData.append('latitud', latitud);
+      formData.append('longitud', longitud);
+      if (foto) {
+        formData.append('foto', foto);
+      }
+
+      fetch('https://script.google.com/macros/s/AKfycbxQbJHAZbVaJK7npgw2rrNiAU78osHrVNYjvBCPBCmu4gIK2fSIFL0DLwQ9BjY3zqED/exec', {
         method: 'POST',
-        mode: 'no-cors',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          ruta: ruta,
-          nombre: nombre,
-          direccion: direccion,
-          semana: semana,
-          dia: dia,
-          id: id,
-          rtn: rtn,
-          telefono: telefono,
-          latitud: latitud,
-          longitud: longitud
-        })
+        body: formData
       })
       .then(() => {
         showToast("✅ Cliente creado exitosamente.", "success");
@@ -227,6 +228,11 @@
       </div>
 
       <div class="mb-3">
+        <label for="foto" class="form-label">Fotografía (opcional):</label>
+        <input type="file" class="form-control" id="foto" accept="image/*">
+      </div>
+
+      <div class="mb-3">
         <label for="coordenadas" class="form-label">Coordenadas (Latitud, Longitud):</label>
         <input type="text" class="form-control" id="coordenadas" readonly style="background-color: #ced4da; border: 2px dashed #6c757d;">
       </div>
@@ -267,6 +273,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
