--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -6,69 +6,71 @@
     <title>Crear Cliente Nuevo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            background-image: url('fondo.png');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            display: flex;
-            flex-direction: column;
-            color: rgb(8, 0, 0);
-        }
+ <style>
+    html, body {
+        height: 100%;
+        margin: 0;
+        background-image: url('fondo.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        /* Esta es la línea que necesitas añadir */
+        background-attachment: fixed;
+        display: flex;
+        flex-direction: column;
+        color: rgb(8, 0, 0);
+    }
 
-        .container {
-            flex: 1;
-        }
-        .readonly {
-            background-color: #f8f9fa;
-            border: 2px dashed #adb5bd;
-            color: #495057;
-            font-style: italic;
-        }
-        .completo {
-            background-color: #d4edda !important;
-            border: 2px solid #28a745 !important;
-            color: #155724 !important;
-            font-weight: bold;
-        }
-        footer {
-            background-color: #000;
-            padding: 20px;
-            color: white;
-            text-align: center;
-        }
+    .container {
+        flex: 1;
+    }
+    .readonly {
+        background-color: #f8f9fa;
+        border: 2px dashed #adb5bd;
+        color: #495057;
+        font-style: italic;
+    }
+    .completo {
+        background-color: #d4edda !important;
+        border: 2px solid #28a745 !important;
+        color: #155724 !important;
+        font-weight: bold;
+    }
+    footer {
+        background-color: #000;
+        padding: 20px;
+        color: white;
+        text-align: center;
+    }
 
-        .footer-content {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 15px;
-        }
+    .footer-content {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
+    }
 
-        .footer-left-img {
-            max-height: 40px;
-        }
+    .footer-left-img {
+        max-height: 40px;
+    }
 
-        footer p {
-            margin: 0;
-        }
+    footer p {
+        margin: 0;
+    }
 
-        #foto-error {
-            display: none;
-        }
+    #foto-error {
+        display: none;
+    }
 
-        .form-control[type="file"] {
-            background-image: url('https://upload.wikimedia.org/wikipedia/commons/4/4e/Upwards_arrow.svg');
-            background-repeat: no-repeat;
-            background-position: center left;
-            background-size: 20px;
-            padding-left: 30px;
-        }
+    .form-control[type="file"] {
+        background-image: url('https://upload.wikimedia.org/wikipedia/commons/4/4e/Upwards_arrow.svg');
+        background-repeat: no-repeat;
+        background-position: center left;
+        background-size: 20px;
+        padding-left: 30px;
+    }
 
-    </style>
+</style>
 
     <script>
         function obtenerCoordenadas() {
